# SalesHeloer

./: .gitignore  Dockerfile  Procfile  README.md  SH_site.db  Saleshelp.py  pyproject.toml  requirements.txt  run.py  sq_db.sql
Project Design/: Дизайн приложения.pptx
Project_OFFERS/Автонова - Д/Contract/: Договір_ССК_Мінідок_29.06.docx
Utils/: Calculate_BVZ.py  Calculate_Equipment.py  Calculate_Pallets.py  Calculate_Plastic_container.py  Calculate_Racks.py  Calculate_S_panel.py  Calculate_Trash_can.py  FDataBase.py  Final_data_project.py  NumConvert.py  Pricing_View.py  UniqueID.py  UserLogin.py  View_BVZ.py  View_final_calculation.py  View_pricing.py  form.py  test.py
static/css/: style.css
static/js/: script.js
templates/: Racks.html  about.html  add_project_accept_info.html  base.html  lead.html  leads.html  login.html  morzh.html  pricing.html  project_accept.html  register.html  testpage.html  warehouse.html
